--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "1.0.2": "^1.0.0",
     "axios": "^1.4.0",
+    "console-browserify": "^1.2.0",
+    "moment": "^2.29.4",
     "monday-sdk-js": "^0.1.6",
     "monday-ui-react-core": "^1.133.0",
     "nth-check": "^2.0.0",
+    "react-datepicker": "^4.14.1",
     "webpack": "^5.75.0"
   },
   "eslintConfig": {
