--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "langchain": "^0.0.96",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.4",
     "monday-sdk-js": "^0.1.6",
