--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "langchain": "^0.0.96",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.4",
     "monday-sdk-js": "^0.1.6",
     "monday-ui-react-core": "^1.133.0",
     "nth-check": "^2.0.0",
+    "openai": "^3.3.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
